# app/services/order/api/v1/communication/responses.go
@@ -1,9 +1,14 @@
 package communication
 
+// ReturnOrderList contains information about all the requested orders.
+// swagger:model
 type ReturnOrderList struct {
+	// all the requested orders
 	Orders []ReturnOrder
 }
 
+// ReturnOrder contains order information.
+// swagger:model
 type ReturnOrder struct {
 	OrderID      int
 	FromUserID   int
